[package]
name = "genearl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.12"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.18"
