[package]
name = "tcp-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
libc = "0.2.152"
log = "0.4.20"
signal-hook = "0.3.17"
tokio = { version = "1.35.1", features = ["full"] }
rocket = "0.5.0"
sha2 = { version = "0.10", features = ["asm"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
walkdir = "2.4.0"
async-channel = "2.2.0"
