[package]
name = "predis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
env_logger = "0.10.1"
log = "0.4.20"
libc = "0.2.152"
async-channel = "2.2.0"
resp = "1.0.3"
